# typed-mongo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-02-23-typed-updates-design.md  2026-02-23-typed-updates-plan.md
docs/superpowers/plans/: 2026-03-22-typed-aggregation.md
docs/superpowers/specs/: 2026-03-22-typed-aggregation-design.md
typed_mongo/: README.md  pyproject.toml
typed_mongo/examples/: basic_usage.py
typed_mongo/src/typed_mongo/: __init__.py  collection.py  model.py  operators.py
typed_mongo/tests/: test_operators.py  test_registry.py  test_typed_collection.py
typed_mongo_gen/: README.md  pyproject.toml
typed_mongo_gen/examples/: generate_types.py
typed_mongo_gen/src/typed_mongo_gen/: cli.py  codegen.py  introspect.py
typed_mongo_gen/tests/: test_cli.py  test_code_generation.py  test_field_path_collection.py  test_integration.py
