[build-system]
requires = ["uv>=0.1.6"]
build-backend = "uv"

[project]
name = "typed-mongo"
version = "0.1.0"
description = "Type-safe MongoDB operators and collection models"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pymongo>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
