[build-system]
requires = ["uv_build>=0.1.0"]
build-backend = "uv_build"

[project]
name = "typed-mongo"
version = "0.1.0"
description = "Type-safe MongoDB operators and collection models"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pymongo>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]
